Admin panel design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
 	--buttonHover: #f44842;
 	--tagHover: #f44842;
 	--borderBg: #ddd;
-	--button: #009669;
-	--button-dark: #008059;
+	--button: #C25072;
+	--button-dark: #8d304c;
 	--font-primary: 'Lora', serif;
 	--font-secondary: 'Newsreader', serif;
 	--sectionGapLg: 64px;
