--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,13 +11,19 @@
 	--primaryBg: #f5f5f2;
 	--primaryCard: #ffffff;
 	--primaryText: #424141;
-	--primaryColor: #C65375;
-	--logoPink: #C65375;
-	--buttonHover: #C65375;
-	--tagHover: #C65375;
+	/* --primaryColor: #C65375; */
+	--primaryColor: #800020;
+	/* --logoPink: #C65375; */
+	--logoPink: #9d0026;
+	/* --buttonHover: #C65375; */
+	--buttonHover: #9d0026;
+	/* --tagHover: #C65375; */
+	--tagHover: #9d0026;
 	--borderBg: #ddd;
-	--button: #C25072;
-	--button-dark: #8d304c;
+	/* --button: #C25072; */
+	--button: #7a001d;
+	/* --button-dark: #8d304c; */
+	--button-dark: #5a0015;
 	--secColor: #D7B06C;
 	--font-primary: 'Lora', serif;
 	--font-secondary: 'Newsreader', serif;
